fix: align top

--- a/packages/waffle-chart/src/scss/waffle-chart.scss
+++ b/packages/waffle-chart/src/scss/waffle-chart.scss
@@ -167,7 +167,6 @@
     }
 
     .cove-waffle-chart {
-      align-items: center;
       padding: 0;
       row-gap: 1rem;
     }
